[gd_scene load_steps=8 format=2]

[ext_resource path="res://Images/herbe.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Scripts/HostButton.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=3]
[ext_resource path="res://Scripts/JoinButton.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Background.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 392 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 397.333, 10 )

[node name="Main" type="Node2D"]
script = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Host" type="Button" parent="CanvasLayer/UI"]
margin_left = 399.0
margin_top = 96.0
margin_right = 634.0
margin_bottom = 158.0
text = "Host"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IP" type="Label" parent="CanvasLayer/UI/Host"]
margin_left = 1.0
margin_top = 43.0
margin_right = 237.0
margin_bottom = 63.0
text = "IP:"
align = 1
valign = 1

[node name="Join" type="Button" parent="CanvasLayer/UI"]
margin_left = 403.0
margin_top = 288.0
margin_right = 638.0
margin_bottom = 350.0
text = "Join"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IP" type="LineEdit" parent="CanvasLayer/UI/Join"]
margin_top = 81.0
margin_right = 237.0
margin_bottom = 105.0
align = 1
placeholder_text = "Enter the host's IP address"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InvalidIP" type="Label" parent="CanvasLayer/UI/Join"]
visible = false
margin_left = 1.0
margin_top = 119.0
margin_right = 236.0
margin_bottom = 140.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Invalid IP address"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Background"]
position = Vector2( 96, 96 )
scale = Vector2( 3, 3 )
frames = ExtResource( 1 )

[node name="AnimatedSprite2" type="AnimatedSprite" parent="Background"]
position = Vector2( 288, 96 )
scale = Vector2( 3, 3 )
frames = ExtResource( 1 )

[node name="AnimatedSprite3" type="AnimatedSprite" parent="Background"]
position = Vector2( 288, 288 )
scale = Vector2( 3, 3 )
frames = ExtResource( 1 )
frame = 1

[node name="AnimatedSprite4" type="AnimatedSprite" parent="Background"]
position = Vector2( 96, 288 )
scale = Vector2( 3, 3 )
frames = ExtResource( 1 )

[node name="AnimatedSprite5" type="AnimatedSprite" parent="Background"]
position = Vector2( 480, 96 )
scale = Vector2( 3, 3 )
frames = ExtResource( 1 )
frame = 1

[node name="AnimatedSprite6" type="AnimatedSprite" parent="Background"]
position = Vector2( 672, 96 )
scale = Vector2( 3, 3 )
frames = ExtResource( 1 )
frame = 1

[node name="AnimatedSprite7" type="AnimatedSprite" parent="Background"]
position = Vector2( 672, 288 )
scale = Vector2( 3, 3 )
frames = ExtResource( 1 )
frame = 2

[node name="AnimatedSprite8" type="AnimatedSprite" parent="Background"]
position = Vector2( 480, 288 )
scale = Vector2( 3, 3 )
frames = ExtResource( 1 )

[node name="AnimatedSprite17" type="AnimatedSprite" parent="Background"]
position = Vector2( 480, 480 )
scale = Vector2( 3, 3 )
frames = ExtResource( 1 )
frame = 2

[node name="AnimatedSprite18" type="AnimatedSprite" parent="Background"]
position = Vector2( 672, 480 )
scale = Vector2( 3, 3 )
frames = ExtResource( 1 )
frame = 1

[node name="AnimatedSprite19" type="AnimatedSprite" parent="Background"]
position = Vector2( 672, 672 )
scale = Vector2( 3, 3 )
frames = ExtResource( 1 )

[node name="AnimatedSprite20" type="AnimatedSprite" parent="Background"]
position = Vector2( 480, 672 )
scale = Vector2( 3, 3 )
frames = ExtResource( 1 )

[node name="AnimatedSprite21" type="AnimatedSprite" parent="Background"]
position = Vector2( 96, 480 )
scale = Vector2( 3, 3 )
frames = ExtResource( 1 )
frame = 2

[node name="AnimatedSprite22" type="AnimatedSprite" parent="Background"]
position = Vector2( 288, 480 )
scale = Vector2( 3, 3 )
frames = ExtResource( 1 )
frame = 1

[node name="AnimatedSprite23" type="AnimatedSprite" parent="Background"]
position = Vector2( 288, 672 )
scale = Vector2( 3, 3 )
frames = ExtResource( 1 )
frame = 1

[node name="AnimatedSprite24" type="AnimatedSprite" parent="Background"]
position = Vector2( 96, 672 )
scale = Vector2( 3, 3 )
frames = ExtResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="Background"]
position = Vector2( -18.6667, 328 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/StaticBody2D"]
position = Vector2( -2.66667, 48 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Background/StaticBody2D"]
position = Vector2( 786.667, 58.6667 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Background/StaticBody2D"]
position = Vector2( 386.667, -336 )
shape = SubResource( 2 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Background/StaticBody2D"]
position = Vector2( 384, 445.334 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="pressed" from="CanvasLayer/UI/Host" to="." method="_on_Host_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/Join" to="." method="_on_Join_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
